# article-format-converter

./: .gitignore  README.md  pyproject.toml
src/article_format_converter/: __init__.py  __main__.py  api.py  cli.py  docx_reader.py  models.py  parser.py  rules.py  service.py
src/article_format_converter/profiles/: __init__.py  pravoslavny_teolog.py
src/article_format_converter/web/: app.js  index.html  styles.css
tests/: test_api.py  test_docx_reader.py  test_parser_and_rules.py  test_web_assets.py
