[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "article-format-converter"
version = "0.1.0"
description = "Automation toolkit for checking and formatting scientific articles against journal requirements."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ratibor Andrew" }
]
dependencies = []

[project.optional-dependencies]
web = [
  "fastapi>=0.115",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30"
]
dev = [
  "httpx>=0.28",
  "pytest>=8.0"
]

[project.scripts]
article-format-converter = "article_format_converter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
article_format_converter = ["web/*.html", "web/*.css", "web/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
